loading order changes, cyclical inheritance check